sandbox/output
Item.java:18: error: ';' expected
                this.quality = 50
                                 ^
1 error
